...
              */
              Form(
                key: _formKey,
                child: Column(
                  children: <Widget>[
                    TextFormField(
                      key: Key('registration_email_field'),
                      style: TextStyle().copyWith(color: Colors.black),
                      keyboardType: TextInputType.emailAddress,
                      textAlign: TextAlign.center,
                      validator: (value) {
                        final String message =
                            FormValidators.validateEmail(value);
...
                    /* 
                    Password input. It checks if the text that 
                    the user inputs is more than 6 characters
                    long.
                    */
                    TextFormField(
                      key: Key('registration_pass_field'),
                      style: TextStyle().copyWith(color: Colors.black),
                      obscureText: true,
                      textAlign: TextAlign.center,
                      validator: (value) {
                        final String message =
                            FormValidators.validatePassword(value);
...
                    /* 
                    Password confirmation input. Checks that the password
                    written in this input is the same as the other
                    password input.
                    */
                    TextFormField(
                      key: Key('registration_confirm_field'),
                      style: TextStyle().copyWith(color: Colors.black),
                      obscureText: true,
                      textAlign: TextAlign.center,
                      validator: (value) {
                        final String message =
                            FormValidators.validatePasswordConfirmation(
...
              /* 
              When the three booleans are equal to true means 
              that the user correctly filled the form an it is
              ready to validate.
              */
              RoundedButton(
                key: Key('registration_register_button'),
                text: AppLocalizations.of(context).translate('register'),
                color: kAccentColor,
                /* 
                While the user is waiting, a spinner will show 
                in the middle of the screen so he/she knows that
                the app is working hard.
...
